<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Visuol</string>
    <string name="vr_activity_name">VR Java</string>
    <string name="title_activity_visuol_launch">VisuolLaunch</string>
    <string name="welcome">Welcome to Visuol</string>
    <string name="startVr">Start VR</string>
    <string name="startAr">Start AR</string>
    <string name="title_activity_app_information">AppInformation</string>
    <string name="learn_more">Learn More</string>
    <string name="title_learn_more">Learn More</string>
    <string name="quadric_surfaces">Quadric Surfaces</string>
    <string name="google_vr">Google VR</string>
    <string name="information_header">Visuol App Information</string>
    <string name="create">Create New Object</string>
    <string name="return_to_home">Back</string>
    <string name="app_information">
        \n
        Project Team Members\n
        Project Manager: Vishnu\n
        Developer: Pieter\n
        Developer: Jiaming\n
    </string>
    <string name="ar_andy">Andy</string>
    <string name="ar_hyperbolic_paraboloid">Hyperbolid Paraboloid</string>
    <string name="ar_elliptic_paraboloid">Elliptic Paraboloid</string>
    <string name="background_image_desc">A background image for the menus</string>
    <string name="color_gray">#596366</string>
    <string name="color_green">#2a8764</string>
</resources>
